# ios_download

./: .gitignore  LICENSE  README.md  generate_mac_app.py  patch_ios_app.py  patch_mac_app.py  patch_mac_app_again.py  xdownloader-backend.spec
client/: Package.swift
client/Apps/XDownloaderMac/: Info.plist  XDownloaderMacApp.swift
client/Apps/XDownloaderiOS/: Info.plist  XDownloaderiOSApp.swift
client/Sources/AppCore/: AppController.swift  ClipboardURLExtractor.swift  DeepLink.swift  JobStore.swift  LocalBackendLauncher.swift  Models.swift  ServerConfiguration.swift  TransferTelemetry.swift
client/Sources/Networking/: APIClient.swift
client/Sources/PlatformAdapters/: FileExportAdapter.swift
client/Sources/SharedUI/: DownloadProgressDetails.swift  (+2 more)
client/XDownloader.xcodeproj/: project.pbxproj
scripts/: install_mac_debug.sh
server/: backend_entry.py  pyproject.toml
server/app/: __init__.py  main.py
server/app/api/: deps.py  router.py
server/app/api/v1/: artifacts.py  devices.py  health.py  jobs.py  youtube.py
server/app/core/: config.py  errors.py  security.py  ytdlp_errors.py
server/app/domain/: models.py
server/app/extractors/: base.py  selector.py  x_provider.py  ytdlp_provider.py
server/app/schemas/: artifacts.py  common.py  devices.py  jobs.py  responses.py  youtube.py
server/app/services/: artifacts.py  database.py  devices.py  jobs.py  media_downloader.py  repositories.py  url_tools.py  youtube_cookies.py
server/app/workers/: audio_separation_job_worker.py  download_job_worker.py
server/tests/: test_app.py  test_ytdlp_provider.py
(+19 files in other folders)
