[project]
name = "x-downloader-server"
version = "0.1.0"
description = "MVP backend for a self-hosted X video downloader"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.1,<1.0.0",
  "pydantic>=2.12.5,<3.0.0",
  "uvicorn>=0.42.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "python-multipart>=0.0.20,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
